Closed Bug 114975 Opened 24 years ago Closed 24 years ago

location.hash fails within multipart/x-mixed-replace

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla0.9.8

People

(Reporter: roberto, Assigned: peterv)

References

()

Details

Attachments

(1 file, 1 obsolete file)

This is a new definition of Bug 114839. The provided url, viewed from Mozilla, should display a series of 6 pages, each displaying 20 lines of text, in multipart format. At the top of each page segment, an anchor is defined (<DIV ID=page1 ....), followed by a javascript containing "location.hash='page1' (or whatever). The multipart message stops displaying altogether when it reaches that location.anchor statement (anchor is correctly updated in navigation bar). No javascript error in the console. This problem started to occur in version 0.9.5
Over to DOM0.... Darin, should this be yours?
Assignee: rogerl → jst
Status: UNCONFIRMED → NEW
Component: Javascript Engine → DOM Level 0
Ever confirmed: true
QA Contact: pschwartau → amar
nope... jst is the rightful owner :)
LocationImpl::SetHash constructs a URI and calls LocationImpl::SetURL, which calls nsDocShell::Stop. We should not call Stop if coming from SetHash.
Assignee: jst → peterv
Attached patch First try at a patch (obsolete) — Splinter Review
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla0.9.8
Attached patch PatchSplinter Review
Attachment #61560 - Attachment is obsolete: true
Looking for reviews.
Comment on attachment 63748 [details] [diff] [review] Patch sr=jst
Attachment #63748 - Flags: superreview+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: