Fix for bug 114975 (location.hash fails within multipart/x-mixed-replace). Don't call nsIWebNavigation->Stop from SetHash. r=sicking, sr=jst.